[package]
name = "payments"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
csv = "1.3"
indexmap = "2"
indoc = "2"
rust_decimal = "1.36"
serde = { version = "1", features = ["derive"] }
similar-asserts = "1.7"
thiserror = "2"

[lints.clippy]
arithmetic_side_effects = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"